--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
     </distributionManagement>
 
     <properties>
-        <revision>18.4-javatime-SNAPSHOT</revision>
+        <revision>18.4-valley_road-SNAPSHOT</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <scala.version>2.11.8</scala.version>
     </properties>
