--- a/pom.xml
+++ b/pom.xml
@@ -349,6 +349,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <args>
                         <arg>-Xlint:deprecation</arg>
                     </args>
