--- a/pom.xml
+++ b/pom.xml
@@ -77,15 +77,6 @@
         <scala.version>2.11.12</scala.version>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-compiler</artifactId>
-            <scope>test</scope>
-            <version>${scala.version}</version>
-        </dependency>
-    </dependencies>
-
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -298,8 +289,8 @@
                     <compilerPlugins>
                         <compilerPlugin>
                             <groupId>org.scalamacros</groupId>
-                            <artifactId>paradise_2.11.5</artifactId>
-                            <version>2.1.0-M5</version>
+                            <artifactId>paradise_${scala.version}</artifactId>
+                            <version>2.1.0</version>
                          </compilerPlugin>
                      </compilerPlugins>
                 </configuration>
