--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     </developers>
 
     <prerequisites>
-        <maven>3.0</maven>
+        <maven>${maven.version}</maven>
     </prerequisites>
 
     <modules>
@@ -72,8 +72,9 @@
     </distributionManagement>
 
     <properties>
-        <revision>20.0-hiawatha_pxs-SNAPSHOT</revision>
+        <maven.version>3.6.2</maven.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <revision>20.0-hiawatha_pxs-SNAPSHOT</revision>
         <scala.version>2.12.10</scala.version>
         <scala.compatibility.version>2.12</scala.compatibility.version>
     </properties>
@@ -199,12 +200,12 @@
             <dependency>
                 <groupId>org.apache.maven</groupId>
                 <artifactId>maven-plugin-api</artifactId>
-                <version>3.0.4</version>
+                <version>${maven.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.maven</groupId>
                 <artifactId>maven-core</artifactId>
-                <version>3.0.4</version>
+                <version>${maven.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.typelevel</groupId>
