--- a/pom.xml
+++ b/pom.xml
@@ -410,6 +410,7 @@
             </plugin>
             <plugin>
                 <artifactId>scala-maven-plugin</artifactId>
+                <version>3.1.7-SNAPSHOT</version>
                 <configuration>
                     <scalaVersion>${scala.version}</scalaVersion>
                     <jvmArgs>
