--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -58,5 +58,10 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.typelevel</groupId>
+            <artifactId>cats-core_2.11</artifactId>
+            <version>2.0.0</version>
+        </dependency>
     </dependencies>
 </project>
