--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
     </distributionManagement>
 
     <properties>
-        <revision>20.5-pioneer-SNAPSHOT</revision>
+        <revision>20.6-razer-SNAPSHOT</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <scala.version>2.11.12</scala.version>
     </properties>
